--- a/.gitmodules
+++ b/.gitmodules
@@ -43,24 +43,21 @@
 [submodule "bundle/pytest.vim"]
 	path = bundle/pytest.vim
 	url = https://github.com/alfredodeza/pytest.vim.git
-[submodule "bundle/vim-makegreen"]
-	path = bundle/vim-makegreen
-	url = https://github.com/reinh/vim-makegreen.git
-[submodule "bundle/TaskList.vim"]
-	path = bundle/TaskList.vim
-	url = https://github.com/vim-scripts/TaskList.vim.git
 [submodule "bundle/rope-vim"]
 	path = bundle/rope-vim
 	url = https://github.com/klen/rope-vim
 [submodule "bundle/vim-wombat"]
 	path = bundle/vim-wombat
 	url = https://github.com/cschlueter/vim-wombat.git
-[submodule "bundle/molokai"]
-	path = bundle/molokai
-	url = https://github.com/vim-scripts/molokai.git
 [submodule "bundle/Solarized"]
 	path = bundle/Solarized
 	url = https://github.com/vim-scripts/Solarized.git
 [submodule "bundle/Conque-Shell"]
 	path = bundle/Conque-Shell
 	url = https://github.com/vim-scripts/Conque-Shell.git
+[submodule "bundle/molokai"]
+	path = bundle/molokai
+	url = https://github.com/vim-scripts/molokai.git
+[submodule "bundle/AfterColors.vim"]
+	path = bundle/AfterColors.vim
+	url = https://github.com/vim-scripts/AfterColors.vim
